# windmill

./: .aiderignore  .dockerignore  .env  .env.local  .envrc  .gitignore  .gitmodules  .mcp.json  .webmux.yaml  .wmdev.yaml  .workmux.yaml  2026-01-12-this-session-is-being-continued-from-a-previous-co.txt  2026-01-14-this-session-is-being-continued-from-a-previous-co.txt  2steps_4workers_benchmark.json  2steps_8workers_benchmark.json  2steps_benchmark.json  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.local.md  CLAUDE.md  CONTEXT.md  Caddyfile  Dockerfile  Dockerfile.sandbox  DockerfileHeavy  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE-APACHE  NOTICE  PENDING_FLOW_REFACTOR_PLAN.md  PLAN.md  PROBE_USAGE.md  PR_PLANS.md  Pipfile  README.md  README_WORKMUX_DEV.md  REVIEW.md  REVIEW_IDEMPOTENCY_TEST.md  (+78 more)
backend/: .devcontainer.json  .env~  .gitattributes  .gitignore  .ignore  .workmux.yaml  2026-01-18-local-command-caveatcaveat-the-messages-below-w.txt  2026-01-29-this-session-is-being-continued-from-a-previous-co.txt  2026-02-06-this-session-is-being-continued-from-a-previous-co.txt  CLAUDE.md  COMPILATION_OPTIMIZATION.md  Cargo.toml  LICENSE  NOTICE  OBJECT_STORE_EXTRACTION.md  QUICKJS_MIGRATION_ANALYSIS.md  README.md  THREAT_MODEL.md  add_ee_code.sh  all_features_oss.sh  bacon.toml  bedrock_summary.txt  build.rs  check_no_symlink.sh  current_session.txt  ee-repo-ref.txt  heaptrack.cargo.1126883.zst  heaptrack.cargo.1128212.zst  heaptrack.cargo.1139731.zst  heaptrack.cargo.1141152.zst  heaptrack.windmill.1148398.zst  heaptrack.windmill.1169547.zst  heaptrack.windmill.1173208.zst  heaptrack.windmill.1176238.zst  heaptrack.windmill.1178628.zst  heaptrack.windmill.1183102.zst  imv  oauth_connect.json  oauth_login.json  openapi.yaml  (+299 more)
backend/.cargo/: config  config.toml
backend/.sqlx/: query-0010ef26da16facd1c2c832601ac687c4c27de46a90f45496b8446af1a9d0578.json  query-002a606e71364b0581dbc496bf4337f276861dc71d2e277a7aef711543eb14d7.json  query-002d68d7c4437522a6dae95af007a356217bbae06b8453f0c32046f0cbf20dcb.json  query-003565f92aebec443c91f5c1c2a5953b98ee7f91d7c3b34947ab8ef1f2252a91.json  query-0035bf99ce6fc00c7338bebfeb7e79bb9e7bc3d216b84279dee0018603965941.json  query-00418f2e621cbe7aed536cff357898f7250544dfcb3bd85d314af1058f3148d8.json  query-00588a40dde5189ac1c61505f17acb0f4c244c60477427505bf5bd1b104d3bf9.json  query-005b9255699e73600c579f74b529caf531b2312b6e405b4d35efd2f7ca663143.json  query-006f03e979abdf8055b1c598bc9806337216a6abf74db4eb64b0acb918a0de08.json  query-007fa93171b244490b94464938b9f95aca4e91bccde6da93cb151799b3398049.json  query-0084c1246d1391d106da2e67a394eafc6695257632406ed9a2111dba1dd106c7.json  query-0088b5bf5cf1c7e47f18c3d05cce09f3462c8e39cb3291f0d497742ad4763fa3.json  query-008e0d4d884c150e59250bff6e8c552cfc41bdf6ef5c84871e97c3eaac09778f.json  query-00a16dbe1729d530f136279471fa3d89ca7f1a88a48fcf0b1ac07144924c1707.json  query-00b6340396f5121aff49323d12a7e3244ebb2cb864828637e7ff7476a4a4939b.json  query-00b9f392a5cc07bd4ed14e3b69f96408e219d70015dd2f419fc87a440f070c64.json  query-00bdac005e3fb2167c90c26b96ab267c19d4b6578736c852114df96ed5575952.json  query-00be497354f5375e9ccffb998d126a853da91d607ff9e57e10d0e5481e4d3848.json  query-00bf3dbd9d3f51dd7fdefcbd654d55e0379cc84188954037165cbe2d198ef71f.json  query-00c0ae12b19ba495f307f0ce6b4833947c5b3fe45826fc5468e326d171d95236.json  query-00c1dd0cfaf15aafdcfcabc1f123cebdf8d777f48e148bcb171fa15e8bf6f098.json  query-00c4a602aa6a50f2f922851ce63b5216e915c7649698687a00d47da55c70349f.json  query-00ce4ed3ca0eac7cb6283b047353a64b9e78c4beb423f04baef9a53fbf87e9f9.json  query-00d1874fcbd5a7b50e730c2a1c6c9b31e857d5b805dd226e3c1c17825b81b3d3.json  query-00e63eab76d26e148b77e932848de74e8b0943d30481465da453942e299a128f.json  query-00e9fc3fed9379264881c58df9404ab3569a0611b33c261602d62e9c847c583e.json  query-00ec0814dc270ee08d8cd818815681862711af1e6b046c4ff479622c153b69ed.json  query-00f68ea1ad2d5ab045b4a20ce3f4dd7850041e396e14890e37e1d0db276d3694.json  query-0102308ffa1c0dbfba54d29246535bb81146a4cfae0ec408435570e0813a3bef.json  query-01050e7057f3d1971ad9e47ac83bf6a3c3c9f41689c3607f0b264437ae6b3324.json  query-011241a9df1c5c3962844f85d898527f2440dd512f592d2265753a684395736b.json  query-011c7638eeeda710deb86a216a9e10df9c3e9458e85bcdde466b01011a1f2ac2.json  query-0128194fb539809e15bee670864fff3e22de8332d0c6d8ca98d22d62137fe701.json  query-013603454ee8335dc841a3637803532cf556bca5ab5a46c78fe2334c361a140e.json  query-0142d9dc9c1b57487dd5709a0376794f18d33e5bd6340c0189be7818cda64328.json  query-0156016836adeb2714d99811e4ad2ea9245f05e772f3601c99312c13ed65ae1a.json  query-01576057b71e32e20a1702b2c89c380eee422060a65b475d7cda8b199d70842e.json  query-015a8551c646f9b027fc23752c5c5c81e520e3ca97dd1cd1e4ebfe3e46c4ad11.json  query-016bf078cdea0aae4a05ae7e004fad573d5c7cbdca975edc34f36890c824c44b.json  query-01732ca02b1888145c48c4e51e5b5829657224a743af9c0b2d5a140ad70e13dd.json  (+5615 more)
backend/bedrock_test/: Cargo.toml
backend/custom_migrations/: bypassrls_1.sql  create_workspace_without_md5.sql  fix_flow_versioning_2.sql  grant_all_current_schema.sql  lowercase_emails_safe.sql
backend/generate_mcp_endpoints_tools/: README.md  generate_mcp_tools.py  requirements.txt
backend/migrations/: 20220123221901_migrate_root.up.sql  20220123221902_migrate_root.up.sql  20220123221903_first.up.sql  20220321004844_flow_preview.down.sql  20220321004844_flow_preview.up.sql  20220421061414_jsonb.down.sql  20220428085013_private_key.up.sql  20220503085923_slack_resource.down.sql  20220504193929_typescript_support.down.sql  20220504193929_typescript_support.up.sql  20220508150023_changeme_passwords.up.sql  20220508152326_create_role_if_not_exists.up.sql  20220509191845_started_at_completed_job.down.sql  20220518211432_make_lang_nullable.up.sql  20220624180013_workspace_premium_grant.up.sql  20220707094935_add_client_to_account.up.sql  20220713142758_script_trigger.up.sql  20220802211304_capture.down.sql  20220802211304_capture.up.sql  20221024225533_apps.up.sql  (+1053 more)
rust-client/: .gitignore  Cargo.proto.toml  Cargo.toml  README.md  build.nu  dev.nu
wm-ts-nav/: Cargo.toml  nav
(+12673 files in other folders)
